[tool.poetry]
name = "streamit2me-scheduled"
version = "0.1.0"
description = ""
authors = ["errolelliott <ezzy.elliott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.72"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
openai = "^1.55.3"
moto = {version = "4.2.13", extras = ["dynamodb"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

